# CoreCycler

./: README.md
corecycler-gui/: Cargo.toml  README.md
corecycler-gui/src/: app.rs  main.rs
corecycler-gui/src/config/: mod.rs  model.rs  parser.rs
corecycler-gui/src/runner/: process.rs
corecycler-gui/src/ui/: config_view.rs  mod.rs  monitor_view.rs  style.rs
